--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 
 <body>
     <section class="group2">
-        <div class="imagem"></div>
-        <h3 class="titlle">Alex Rodrigues</h3>
-        <h4 class="subtitlle">Desenvolvedor Front-End</h4>
-        <p class="subtitlle">Desenvolvedor motivado, que está disposto a aprender e criar excelentes aplicativos de
-            interface do usuário.</p>
-
+        <img class="imagem" src="./assets/img/image.jpg" alt="foto-perfil">
+        <h3 class="title">Alex Rodrigues</h3>
+        <div class="subtitle">
+            <p>Desenvolvedor Front-End</p><br>
+            <p>Desenvolvedor motivado, que está disposto a aprender e criar excelentes aplicativos de
+                interface do usuário.</p>
+        </div>
     </section>
     <section class="group3">
-        <h3 class="titlle">Tecnologias</h3>
-        <h4 class="subtitlle">HTML</h4><br><br>
+        <h3 class="title">Tecnologias</h3>
+        <h4 class="subtitle">HTML</h4><br><br>
         <div class="barra-azul"></div>
         <div class="barra-cinza"></div>
-        <h4 class="subtitlle">CSS</h4><br><br>
+        <h4 class="subtitle">CSS</h4><br><br>
         <div class="barra-azul2"></div>
         <div class="barra-cinza2"></div>
-        <h4 class="subtitlle">JavaScript</h4><br><br>
+        <h4 class="subtitle">JavaScript</h4><br><br>
         <div class="barra-azul"></div>
         <div class="barra-cinza"></div>
 
