--- a/index.html
+++ b/index.html
@@ -18,20 +18,27 @@
             <p>Desenvolvedor motivado, que está disposto a aprender e criar excelentes aplicativos de
                 interface do usuário.</p>
         </div>
-    </section>
-    <section class="group3">
-        <h3 class="title">Tecnologias</h3>
-        <h4 class="subtitle">HTML</h4><br><br>
-        <div class="barra-azul"></div>
-        <div class="barra-cinza"></div>
-        <h4 class="subtitle">CSS</h4><br><br>
-        <div class="barra-azul2"></div>
-        <div class="barra-cinza2"></div>
-        <h4 class="subtitle">JavaScript</h4><br><br>
-        <div class="barra-azul"></div>
-        <div class="barra-cinza"></div>
+        <div class="contatos">
+            <h3 class="title">Contatos:</h3>
+
+        </div>
 
     </section>
+
+    <!--LISTA DE TECNOLOGIAS-->
+    <section class="group3">
+        <h3 class="title">Tecnologias</h3>
+        <h4 class="lista">HTML</h4><br>
+        <div class="barra-azul"></div>
+        <div class="barra-cinza"></div>
+        <h4 class="lista">CSS</h4><br>
+        <div class="barra-azul2"></div>
+        <div class="barra-cinza2"></div>
+        <h4 class="lista">JavaScript</h4><br>
+        <div class="barra-azul"></div>
+        <div class="barra-cinza"></div>
+    </section>
+
 
 
 </body>
