--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 interface do usuário.</p>
         </div>
         <div class="contatos">
-            <h3 class="title">Contatos:</h3>
+            <h3 class="title">Contato:</h3>
+            <h4>Fone/whatsapp: 51995428272</h4>
+            <h4>E-mail: alexmusicalsa@gmail.com</h4>
 
         </div>
 
