--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         <h4 class="lista">JavaScript</h4><br>
         <div class="barra-azul"></div>
         <div class="barra-cinza"></div>
+        <div class="social-media">
+            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+        </div>
     </section>
 
 
